--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CSS Snippets</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets.new/css/style.css" />
   </head>
   <header class="main-header">
     <h1>CSS Snippet Cheatsheet</h1>
